src/k8s/platform/configuration/traefik/traefik-dashboard-ingress/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-https-redirect
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
