src/k8s/platform/configuration/traefik/traefik-dashboard-ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
    - cloudflared
  routes:
    - match: Host(`traefik.sgf.dev`)
      kind: Rule
      middlewares:
        - name: oauth2-sign-in-errors
          namespace: oauth2-proxy
        - name: traefik-forward-auth
          namespace: oauth2-proxy
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-redirect
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.sgf.dev`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-https-redirect
      services:
        - name: api@internal
          kind: TraefikService
